Update index.html: expand content and apply new styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brandon Taylor | Scholar</title>
+  <title>Brandon Taylor | Scholar & Editor</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
@@ -18,24 +22,40 @@
   </header>
 
   <main>
+    <section id="bio">
+      <h2>About Me</h2>
+      <p>I am an assistant professor of English at Mount Marty University and editor-in-chief of <a href="https://earlymodernletters.org" target="_blank">Early Modern Letters</a>. My work examines how early modern literature engages questions of institutional power, political theology, and corporate form, with a focus on figures like John Donne, Aphra Behn, and William Shakespeare.</p>
+    </section>
+
     <section id="research">
       <h2>Research</h2>
-      <p>Work on Donne, Behn, corporate rhetoric, and more.</p>
+      <ul>
+        <li><strong>Empire of the Unincorporated</strong> — Book manuscript under revision, exploring early modern corporate rhetoric</li>
+        <li>Recent articles on Donne’s Virginia Sermon, the New Model Army, and Behn’s <em>Oroonoko</em> are in progress.</li>
+        <li>Public essays are forthcoming.</li>
+      </ul>
     </section>
 
     <section id="teaching">
       <h2>Teaching</h2>
-      <p>Courses in early modern literature, composition, and digital editing.</p>
+      <p>I teach undergraduate courses on early modern literature, rhetoric and composition, and the history of the English language. My classes often blend close reading, historical analysis, and multimodal assignments.</p>
     </section>
 
     <section id="projects">
       <h2>Digital Projects</h2>
-      <p><a href="https://earlymodernletters.org">Early Modern Letters</a> — TEI-based digital editorial lab.</p>
+      <ul>
+        <li><a href="https://earlymodernletters.org" target="_blank">Early Modern Letters</a> — A TEI-based scholarly edition of the letters of John Chamberlain</li>
+        <li>XML editorial templates and digital humanities workflows for student and collaborative annotation</li>
+      </ul>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: your.email@university.edu</p>
+      <p>Email: brandon.taylor[at]mountmarty.edu</p>
+      <p>
+        <a href="https://orcid.org/0000-0000-0000-0000" target="_blank">ORCID</a> |
+        <a href="https://github.com/bnrtaylor-eng" target="_blank">GitHub</a>
+      </p>
     </section>
   </main>
 
