--- a/index.html
+++ b/index.html
@@ -14,40 +14,18 @@
     <h1>Brandon Taylor</h1>
     <p>Scholar of early modern literature, political theology, and corporate form.</p>
     <nav>
-      <a href="#research">Research</a> |
-      <a href="#teaching">Teaching</a> |
-      <a href="#projects">Projects</a> |
-      <a href="#contact">Contact</a>
+      <a href="research.html">Research</a> |
+      <a href="teaching.html">Teaching</a> |
+      <a href="projects.html">Projects</a>
     </nav>
   </header>
 
   <main>
     <section id="bio">
       <h2>About Me</h2>
-      <p>I am an assistant professor of English at Mount Marty University and editor-in-chief of <a href="https://earlymodernletters.org" target="_blank">Early Modern Letters</a>. My work examines how early modern literature engages questions of institutional power, political theology, and corporate form, with a focus on figures like John Donne, Aphra Behn, and William Shakespeare.</p>
+      <p>I am an Assistant Professor of English at Mount Marty University and Editor-in-Chief of <a href="https://earlymodernletters.org" target="_blank">Early Modern Letters</a>. My work examines how early modern literature engages questions of institutional power, political theology, and corporate form, with a focus on figures like John Donne, Aphra Behn, and William Shakespeare.</p>
     </section>
-
-    <section id="research">
-      <h2>Research</h2>
-      <ul>
-        <li><strong>Empire of the Unincorporated</strong> — Book manuscript under revision, exploring early modern corporate rhetoric</li>
-        <li>Recent articles on Donne’s Virginia Sermon, the New Model Army, and Behn’s <em>Oroonoko</em> are in progress.</li>
-        <li>Public essays are forthcoming.</li>
-      </ul>
-    </section>
-
-    <section id="teaching">
-      <h2>Teaching</h2>
-      <p>I teach undergraduate courses on early modern literature, rhetoric and composition, and the history of the English language. My classes often blend close reading, historical analysis, and multimodal assignments.</p>
-    </section>
-
-    <section id="projects">
-      <h2>Digital Projects</h2>
-      <ul>
-        <li><a href="https://earlymodernletters.org" target="_blank">Early Modern Letters</a> — A TEI-based scholarly edition of the letters of John Chamberlain</li>
-        <li>XML editorial templates and digital humanities workflows for student and collaborative annotation</li>
-      </ul>
-    </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Brandon Taylor</p>
