Enhance index navigation and layout; synchronize navbar across all pages

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <header>
     <h1>Brandon Taylor</h1>
     <p>Scholar of early modern literature, political theology, and corporate form.</p>
-    <nav>
-      <a href="research.html">Research</a> |
-      <a href="teaching.html">Teaching</a> |
-      <a href="projects.html">Projects</a>
+    <nav class="main-nav">
+      <a href="research.html"><strong>Research</strong></a>
+      <a href="teaching.html"><strong>Teaching</strong></a>
+      <a href="projects.html"><strong>Digital Projects</strong></a>
     </nav>
   </header>
 
@@ -24,6 +24,9 @@
     <section id="bio">
       <h2>About Me</h2>
       <p>I am an Assistant Professor of English at Mount Marty University and Editor-in-Chief of <a href="https://earlymodernletters.org" target="_blank">Early Modern Letters</a>. My work examines how early modern literature engages questions of institutional power, political theology, and corporate form, with a focus on figures like John Donne, Aphra Behn, and William Shakespeare.</p>
+    </section>
+    <section id="navigation-note">
+      <p>Use the links above to explore my research interests, teaching experience, and digital projects in more detail.</p>
     </section>
   </main>
 
