--- a/teaching.html
+++ b/teaching.html
@@ -9,12 +9,12 @@
 <body>
   <header>
     <h1>Brandon Taylor</h1>
-    <nav>
-      <a href="index.html">Home</a> |
-      <a href="research.html">Research</a> |
-      <a href="teaching.html">Teaching</a> |
-      <a href="projects.html">Projects</a>
-    </nav>
+    <nav class="main-nav">
+  <a href="index.html"><strong>Home</strong></a>
+  <a href="research.html"><strong>Research</strong></a>
+  <a href="teaching.html"><strong>Teaching</strong></a>
+  <a href="projects.html"><strong>Digital Projects</strong></a>
+</nav>
   </header>
 
   <main>
