Refine homepage with research ethos, Donne quote, and updated section structure

--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
     <section id="navigation-note">
       <p>Use the links above to explore my research interests, teaching experience, and digital projects in more detail.</p>
     </section>
+
+    <section id="statement-of-purpose">
+      <h2>Research Ethos</h2>
+      <p>I study how literary form articulates and contests institutional power, focusing on political theology, corporate identity, and collective life. My work explores the kinds of communities literature envisions, alongside the forms of power it renders intelligible.</p>
+    </section>
+
+    <section id="epigraph" style="margin-top: 2rem; font-style: italic; text-align: center;">
+      <p>“No man is an island, entire of itself; every man is a piece of the continent, a part of the main.”<br>— John Donne</p>
+    </section>
+
+    <section id="highlights">
+      <h2>Currently</h2>
+      <ul>
+        <li>Revising <em>Empire of the Unincorporated</em> for submission</li>
+        <li>Teaching “What is America?” in Early American Literature</li>
+        <li>Building contributor tools for <em>Early Modern Letters</em></li>
+      </ul>
+    </section>
+
+    <section id="site-purpose">
+      <p>This site serves as a record of my work as a scholar, teacher, and editor. It also documents the ongoing development of open-access digital editorial projects and collaborative undergraduate research.</p>
+    </section>
   </main>
 
   <footer>
