Tweak homepage content for clarity and emphasis

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <section id="highlights">
       <h2>Currently</h2>
       <ul>
-        <li>Revising <em>Empire of the Unincorporated</em> for submission</li>
-        <li>Teaching “What is America?” in Early American Literature</li>
-        <li>Building contributor tools for <em>Early Modern Letters</em></li>
+        <li>Revising <em>Empire of the Unincorporated</em> for submission.</li>
+        <li>Developing course materials for Mythology and Early American Literature courses.</li>
+        <li>Building contributor tools for <em>Early Modern Letters.</em></li>
       </ul>
     </section>
 
