Refine research overview to reflect broader source base and institutional focus

--- a/research.html
+++ b/research.html
@@ -20,21 +20,21 @@
   <main>
     <h2>Research</h2>
 
-    <p>My research explores how early modern English literature engages with questions of institutional legitimacy, political theology, and collective identity. I am especially interested in how corporate forms—legal, religious, and rhetorical—shaped early modern understandings of authority, personhood, and community.</p>
+    <p>My research examines how early modern texts—including literature, economic tracts, letters, pamphlets, and company charters—register and reshape institutional forms, especially corporate and ecclesiastical ones. I focus on how these materials engage the mechanisms of authority, representation, and incorporation that defined the period’s political and socioeconomic imagination.</p>
 
-    <p>My current book project, <em>Empire of the Unincorporated</em>, examines how seventeenth-century writers such as John Donne, Aphra Behn, and others responded to the emerging logic of incorporation. Drawing on corporate legal theory, theological voluntarism, rhetorical analysis, and literary form, the project examines how English writers engaged the grammar of institutional power—resisting, reframing, and at times reinforcing early modern structures of authority, especially those underpinning empire, racial slavery, and economic abstraction.</p>
+    <p>My current book project, <em>Empire of the Unincorporated</em>, examines how seventeenth-century writers such as John Donne, Aphra Behn, and others responded to the emerging logic of incorporation. Drawing on corporate legal theory, theological voluntarism, rhetorical analysis, and literary form, the project explores how English writers engaged the grammar of institutional power as a means of resisting, reframing, and at times reinforcing early modern structures of authority. Particular attention is given to the ideological frameworks underpinning empire, racial slavery, and economic abstraction.</p>
 
 
     <p>I am currently developing articles on Donne’s 1622 Virginia Sermon, the rhetoric of the New Model Army, and the ideological ambiguities in Behn’s <em>Oroonoko</em>. My work engages with corporate theory, rhetorical history, Atlantic studies, early modern religious writing, and the intersections of literature with law, theology, and institutional form. I am also writing public-facing scholarship on the moral and political challenges of institutional life.</p>
 
     <h3>Selected Articles in Progress</h3>
     <ul>
-      <li><em>God’s Business: The Virginia Company Sermons and John Donne’s Corporate Theology.</em> — This essay explores how the Virginia Company’s 1609 sermons, culminating in John Donne’s 1622 sermon, use biblical rhetoric to reframe colonial failure as spiritual purpose, constructing a model of apostolic corporate identity that replaces profit with piety and lays the ideological groundwork for English imperial and corporate expansion.</li>
+      <li><em>God’s Business: The Virginia Company Sermons and John Donne’s Corporate Theology</em> — This essay explores how the Virginia Company’s 1609 sermons, culminating in John Donne’s 1622 sermon, use biblical rhetoric to reframe colonial failure as spiritual purpose, constructing a model of apostolic corporate identity that replaces profit with piety and lays the ideological groundwork for English imperial and corporate expansion.</li>
       <li><em>As One Man: The New Model Army and the Rhetoric of Incorporation</em> — This essay examines the New Model Army as a corporate body grounded in voluntary association and spiritual unity. It traces how corporate rhetoric shaped its self-understanding, culminating in a rereading of the Putney Debates as a contest between egalitarian incorporation and emergent oligarchic state power.</li>
       <li><em>The Tragedy of the Unincorporated: Aphra Behn, Corporate Ideology, and the Rhetoric of Slavery</em> — This essay traces how corporate discourse migrated from legal charters and company pamphlets into literary form, arguing that Aphra Behn’s <em>Oroonoko</em> absorbs and aestheticizes the rhetoric of incorporation. The novella’s tragic arc reveals the ideological work required to naturalize slavery within England’s emerging imperial and economic order.</li>
     </ul>
 
-    <p>Across my writing, I am committed to tracing how literary form encodes structures of thought—especially when those structures reflect the tension between freedom and obligation, incorporation and resistance.</p>
+    <p>Across my writing, I am committed to tracing how literary form encodes structures of thought, especially when those structures reflect the tension between freedom and obligation, incorporation and resistance.</p>
   </main>
 
   <footer>
