--- a/teaching.html
+++ b/teaching.html
@@ -14,6 +14,7 @@
   <a href="research.html"><strong>Research</strong></a>
   <a href="teaching.html"><strong>Teaching</strong></a>
   <a href="projects.html"><strong>Digital Projects</strong></a>
+  <a href="blog.html"><strong>Blog</strong></a>
 </nav>
   </header>
 
