Style and structure updates to blog layout and heading fonts

--- a/blog.html
+++ b/blog.html
@@ -30,13 +30,13 @@
       </article>
 
       <article>
-        <h3><a href="posts/writing-advice.html">How to Revise a Sentence</a></h3>
+        <h3><a href="posts/how-to-revise-a-sentence.html">How to Revise a Sentence</a></h3>
         <p class="date">20 May 2025</p>
         <p class="summary">Some practical strategies for tightening student writing without losing voice.</p>
       </article>
 
       <article>
-        <h3><a href="posts/tools-i-use.html">Tools I Use to Edit Texts</a></h3>
+        <h3><a href="posts/tools-i-use-to-edit-texts.html">Tools I Use to Edit Texts</a></h3>
         <p class="date">15 May 2025</p>
         <p class="summary">A short guide to how I use Git, XML, and static sites to build collaborative editions.</p>
       </article>
