Add and refine blog post on 17th-century email habits with student tips

--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,12 @@
 
     <section class="blog-list">
       <article>
+        <h3><a href="posts/what-17th-century-taught-me-about-email.html">What the 17th Century Taught Me About Email</a></h3>
+        <p class="date">01 June 2025</p>
+        <p class="summary">Lessons from John Chamberlain’s seventeenth-century letters on how to write emails with care, rhythm, and intention.</p>
+      </article>
+
+      <article>
         <h3><a href="posts/what-is-a-charter.html">What Is a Charter?</a></h3>
         <p class="date">26 May 2025</p>
         <p class="summary">A short explanation of early modern charters and why they matter for understanding literature, power, and corporate logic.</p>
