--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,12 @@
 
     <section class="blog-list">
       <article>
+        <h3><a href="posts/what-is-a-sermon-for.html">What Is a Sermon For?</a></h3>
+        <p class="date">09 June 2025</p>
+        <p class="summary">A brief look at how early colonial sermons preached empire, not just doctrine.</p>
+      </article>
+
+      <article>
         <h3><a href="posts/what-17th-century-taught-me-about-email.html">What the 17th Century Taught Me About Email</a></h3>
         <p class="date">01 June 2025</p>
         <p class="summary">Lessons from John Chamberlain’s seventeenth-century letters on how to write emails with care, rhythm, and intention.</p>
