Add Donne’s Long Sentence blog post to index

--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,12 @@
 
     <section class="blog-list">
       <article>
+        <h3><a href="posts/donne-sermon-analysis.html">Donne’s Long Sentence</a></h3>
+        <p class="date">17 June 2025</p>
+        <p class="summary">A close reading of one sentence from Donne’s 1622 sermon and how syntax shapes obligation.</p>
+      </article>
+      
+      <article>
         <h3><a href="posts/what-is-a-sermon-for.html">What Is a Sermon For?</a></h3>
         <p class="date">09 June 2025</p>
         <p class="summary">A brief look at how early colonial sermons preached empire, not just doctrine.</p>
