Restructure blog index with monthly collapsible sections

--- a/blog.html
+++ b/blog.html
@@ -23,41 +23,51 @@
     <p>This blog features short reflections, notes, and resources on writing, teaching, editing, and early modern research.</p>
 
     <section class="blog-list">
-      <article>
-        <h3><a href="posts/donne-sermon-analysis.html">Donne’s Long Sentence</a></h3>
-        <p class="date">17 June 2025</p>
-        <p class="summary">A close reading of one sentence from Donne’s 1622 sermon and how syntax shapes obligation.</p>
-      </article>
-      
-      <article>
-        <h3><a href="posts/what-is-a-sermon-for.html">What Is a Sermon For?</a></h3>
-        <p class="date">09 June 2025</p>
-        <p class="summary">A brief look at how early colonial sermons preached empire, not just doctrine.</p>
-      </article>
 
-      <article>
-        <h3><a href="posts/what-17th-century-taught-me-about-email.html">What the 17th Century Taught Me About Email</a></h3>
-        <p class="date">01 June 2025</p>
-        <p class="summary">Lessons from John Chamberlain’s seventeenth-century letters on how to write emails with care, rhythm, and intention.</p>
-      </article>
+      <details open>
+        <summary><strong>June 2025</strong></summary>
 
-      <article>
-        <h3><a href="posts/what-is-a-charter.html">What Is a Charter?</a></h3>
-        <p class="date">26 May 2025</p>
-        <p class="summary">A short explanation of early modern charters and why they matter for understanding literature, power, and corporate logic.</p>
-      </article>
+        <article>
+          <h3><a href="posts/donne-sermon-analysis.html">Donne’s Long Sentence</a></h3>
+          <p class="date">17 June 2025</p>
+          <p class="summary">A close reading of one sentence from Donne’s 1622 sermon and how syntax shapes obligation.</p>
+        </article>
 
-      <article>
-        <h3><a href="posts/how-to-revise-a-sentence.html">How to Revise a Sentence</a></h3>
-        <p class="date">20 May 2025</p>
-        <p class="summary">Some practical strategies for tightening student writing without losing voice.</p>
-      </article>
+        <article>
+          <h3><a href="posts/what-is-a-sermon-for.html">What Is a Sermon For?</a></h3>
+          <p class="date">09 June 2025</p>
+          <p class="summary">A brief look at how early colonial sermons preached empire, not just doctrine.</p>
+        </article>
 
-      <article>
-        <h3><a href="posts/tools-i-use-to-edit-texts.html">Tools I Use to Edit Texts</a></h3>
-        <p class="date">15 May 2025</p>
-        <p class="summary">A short guide to how I use Git, XML, and static sites to build collaborative editions.</p>
-      </article>
+        <article>
+          <h3><a href="posts/what-17th-century-taught-me-about-email.html">What the 17th Century Taught Me About Email</a></h3>
+          <p class="date">01 June 2025</p>
+          <p class="summary">Lessons from John Chamberlain’s seventeenth-century letters on how to write emails with care, rhythm, and intention.</p>
+        </article>
+      </details>
+
+      <details>
+        <summary><strong>May 2025</strong></summary>
+
+        <article>
+          <h3><a href="posts/what-is-a-charter.html">What Is a Charter?</a></h3>
+          <p class="date">26 May 2025</p>
+          <p class="summary">A short explanation of early modern charters and why they matter for understanding literature, power, and corporate logic.</p>
+        </article>
+
+        <article>
+          <h3><a href="posts/how-to-revise-a-sentence.html">How to Revise a Sentence</a></h3>
+          <p class="date">20 May 2025</p>
+          <p class="summary">Some practical strategies for tightening student writing without losing voice.</p>
+        </article>
+
+        <article>
+          <h3><a href="posts/tools-i-use-to-edit-texts.html">Tools I Use to Edit Texts</a></h3>
+          <p class="date">15 May 2025</p>
+          <p class="summary">A short guide to how I use Git, XML, and static sites to build collaborative editions.</p>
+        </article>
+      </details>
+
     </section>
   </main>
 
