Update blog index with July 2025 post listing

--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,16 @@
     <section class="blog-list">
 
       <details open>
+        <summary><strong>July 2025</strong></summary>
+
+        <article>
+          <h3><a href="posts/reading-corporate-language-today.html">Reading Corporate Language Today</a></h3>
+          <p class="date">31 July 2025</p>
+          <p class="summary">Reflections on how early modern corporate language still shapes how we continue read institutions and power.</p>
+        </article>
+      </details>
+
+      <details open>
         <summary><strong>June 2025</strong></summary>
 
         <article>
