Update homepage content and Recent Publications section

--- a/index.html
+++ b/index.html
@@ -24,26 +24,18 @@
   <main>
     <section id="bio">
       <h2>About Me</h2>
-      <p>I am an Assistant Professor of English at Mount Marty University and Editor-in-Chief of <a href="https://earlymodernletters.org" target="_blank">Early Modern Letters</a>. My work examines how early modern literature engages questions of institutional power, political theology, and corporate form, with a focus on figures like John Donne, Aphra Behn, and William Shakespeare.</p>
+      <p>I am an Assistant Professor of English at Mount Marty University, where I specialize in early modern literature and political theology. My research examines how literary and rhetorical forms intersect with the development of institutional and economic structures in the seventeenth century. I am also developing a TEI-based digital edition of <a href="https://earlymodernletters.org" target="_blank">The Letters of John Chamberlain</a>, building an open-access archive of early modern correspondence. My work contributes to ongoing scholarly conversations in early modern studies, political theory, and the history of capitalism.</p>
     </section>
+
     <section id="navigation-note">
       <p>Use the links above to explore my research interests, teaching experience, and digital projects in more detail.</p>
-    </section>
-
-    <section id="statement-of-purpose">
-      <h2>Research</h2>
-      <p>I study how literary form articulates and contests institutional power, focusing on political theology, corporate identity, and collective life. My work explores the kinds of communities literature envisions, alongside the forms of power it renders intelligible.</p>
-    </section>
-
-    <section id="epigraph" style="margin-top: 2rem; font-style: italic; text-align: center;">
-      <p>“No man is an island, entire of itself; every man is a piece of the continent, a part of the main.”<br>— John Donne</p>
     </section>
 
     <section id="highlights">
       <h2>Currently</h2>
       <ul>
-        <li>Revising <em>Empire of the Unincorporated</em> for submission.</li>
-        <li>Developing course materials for Mythology and Early American Literature courses.</li>
+        <li>Revising <em>Empire of the Unincorporated</em> for submission with a university press.</li>
+        <li>Developing course materials for News Writing and Adolescent/Young Adult Literature courses.</li>
         <li>Building contributor tools for <em>Early Modern Letters.</em></li>
       </ul>
     </section>
